--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Smart EnviroMonitor</title>
+  <title>Smart EnviroMonitor - Dashboard Interaktif</title>
   <link rel="stylesheet" href="css/style.css" />
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
   <header class="fade-in">
@@ -34,13 +35,17 @@
     </section>
 
     <section class="controls fade-in">
-      <button id="fetchData">Ambil Data Nyata 🌍</button>
-      <button id="simulateData">Simulasi Data 🔄</button>
-      <button id="switchCam">🔄 Ganti Kamera</button>
+      <button id="fetchData">🌍 Ambil Data Nyata</button>
+      <button id="simulateData">🔄 Simulasi Data</button>
+      <button id="switchCam">📸 Ganti Kamera</button>
     </section>
 
     <section class="camera-container fade-in">
       <video id="cameraFeed" autoplay playsinline></video>
+    </section>
+
+    <section class="chart-section fade-in">
+      <canvas id="enviroChart"></canvas>
     </section>
   </main>
 
