--- a/index.html
+++ b/index.html
@@ -9,26 +9,26 @@
 </head>
 <body>
   <header class="fade-in">
-    <img src="assets/logo.png" alt="Logo" class="logo" />
+    <img src="assets/LOGO ANJAY.png" alt="Logo" class="logo" />
     <h1>Smart EnviroMonitor</h1>
   </header>
 
   <main>
     <section class="dashboard fade-in">
       <div class="card" id="temperature">
-        <img src="assets/icons/temp.svg" alt="Temp Icon">
+        <img src="assets/icons/TEMPT.png" alt="Temp Icon">
         <h2>Suhu</h2>
         <p><span id="tempValue">--</span> °C</p>
       </div>
 
       <div class="card" id="humidity">
-        <img src="assets/icons/humidity.svg" alt="Humidity Icon">
+        <img src="assets/icons/HUMI.png" alt="Humidity Icon">
         <h2>Kelembapan</h2>
         <p><span id="humidityValue">--</span> %</p>
       </div>
 
       <div class="card" id="air">
-        <img src="assets/icons/air.svg" alt="Air Icon">
+        <img src="assets/icons/AQI.png" alt="Air Icon">
         <h2>Kualitas Udara</h2>
         <p><span id="airValue">--</span> AQI</p>
       </div>
