--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="js/main.js" defer></script>
   <script src="js/chart.js" defer></script>
-  <script src="js/ai_insight.js" defer></script>
+  <script src="js/ai-insight.js" defer></script>
 </head>
 <body>
   <header>
@@ -27,7 +27,7 @@
 
   <div class="actions">
     <button id="refreshBtn">🔄 Perbarui</button>
-    <button onclick="location.href='ar.html'">🕶️ Mode AR</button>
+    <button onclick="location.href='ar_view.html'">🕶️ Mode AR</button>
   </div>
 </body>
 </html>
