--- a/index.html
+++ b/index.html
@@ -1,33 +1,57 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Smart Environment Monitor</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="style.css">
+  <link rel="manifest" href="manifest.json">
+  <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/ar.js@3.4.5/aframe/build/aframe-ar.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <script src="js/main.js" defer></script>
-  <script src="js/chart.js" defer></script>
-  <script src="js/ai-insight.js" defer></script>
 </head>
+
 <body>
   <header>
-    <h1>🌤️ Smart Environment Monitor</h1>
-    <button id="darkModeToggle">🌓</button>
+    <h1>🌍 Smart Environment Monitor</h1>
+    <p>Kota: <span id="city">Semarang</span></p>
+    <button id="startAR">📷 Aktifkan Kamera AR</button>
   </header>
 
-  <section class="info">
-    <h2 id="city">Semarang</h2>
-    <p>Suhu: <span id="temp">--</span> °C</p>
-    <p>Kelembapan: <span id="humidity">--</span> %</p>
-    <p>Kualitas Udara: <span id="air">--</span></p>
-    <p><b id="ai-insight">Menganalisis kondisi...</b></p>
+  <main>
+    <section class="card">
+      <h2>🌤️ Data Cuaca</h2>
+      <p><strong>Suhu:</strong> <span id="temp">-</span> °C</p>
+      <p><strong>Kelembapan:</strong> <span id="humidity">-</span>%</p>
+      <p><strong>Kualitas Udara:</strong> <span id="air">-</span></p>
+      <p id="insight" class="ai"></p>
+    </section>
+
+    <section class="card">
+      <canvas id="chartCanvas" width="400" height="200"></canvas>
+    </section>
+  </main>
+
+  <section id="ar-section" style="display:none;">
+    <a-scene embedded arjs>
+      <a-marker preset="hiro">
+        <a-image src="assets/logo-marker.png" rotation="-90 0 0" height="1.5" width="1.5"></a-image>
+      </a-marker>
+      <a-entity camera></a-entity>
+    </a-scene>
   </section>
 
-  <canvas id="chartCanvas"></canvas>
+  <audio id="alertSound" src="assets/sound/alert.mp3" preload="auto"></audio>
 
-  <div class="actions">
-    <button id="refreshBtn">🔄 Perbarui</button>
-    <button onclick="location.href='ar_view.html'">🕶️ Mode AR</button>
-  </div>
+  <footer>
+    <p>© 2025 Smart Environment Monitor | Universitas Wahid Hasyim</p>
+  </footer>
+
+  <!-- Modular scripts -->
+  <script src="js/api.js"></script>
+  <script src="js/ai-insight.js"></script>
+  <script src="js/chart.js"></script>
+  <script src="js/camera.js"></script>
+  <script src="js/script.js"></script>
 </body>
 </html>
