--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
       <div class="scan-line"></div>
       <p>🔍 Memindai lingkungan sekitar...</p>
     </div>
+
     <model-viewer 
       src="assets/globe.glb" 
       alt="Globe 3D"
@@ -52,7 +53,7 @@
       camera-controls
       ar
       ar-modes="webxr scene-viewer quick-look"
-      style="width: 250px; height: 250px; margin:auto;">
+      style="width: 250px; height: 250px; margin:auto; display:none;">
     </model-viewer>
   </section>
 
