--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </div>
 
     <model-viewer 
-      src="assets/globe.glb" 
+      src="assets/flower-model/flowe/__init__.py" 
       alt="Globe 3D"
       auto-rotate
       camera-controls
