--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </header>
 
   <main>
-    <!-- Tampilan Cuaca -->
+    <!-- Cuaca -->
     <div class="card" id="weather-card">
       <h2>🌡️ Cuaca Saat Ini</h2>
       <p id="lokasi">Kota Semarang</p>
