--- a/index.html
+++ b/index.html
@@ -37,13 +37,19 @@
     </div>
   </main>
 
-  <!-- AR Section -->
-  <section id="ar-section" class="hidden">
-    <div id="camera-container"></div>
-    <div class="dummy-3d"></div>
-    <div class="scan-line"></div>
-    <p class="scanner-text">🔍 Memindai lingkungan sekitar...</p>
-  </section>
+<!-- AR Section -->
+<section id="ar-section" class="hidden">
+  <div id="camera-container"></div>
+
+  <!-- Dummy AR objects -->
+  <div class="dummy-3d" id="dummy1"></div>
+  <div class="dummy-3d" id="dummy2"></div>
+  <div class="dummy-3d" id="dummy3"></div>
+
+  <div class="scan-line"></div>
+  <p class="scanner-text">🔍 Memindai lingkungan sekitar...</p>
+</section>
+
 
   <footer>
     © 2025 Smart Environment Monitor | Universitas Wahid Hasyim Semarang
