--- a/index.html
+++ b/index.html
@@ -37,7 +37,6 @@
     </div>
   </main>
 
-<!-- AR Section -->
 <section id="ar-section" class="hidden">
   <div id="camera-container"></div>
 
@@ -45,10 +44,14 @@
   <div class="dummy-3d" id="dummy1"></div>
   <div class="dummy-3d" id="dummy2"></div>
   <div class="dummy-3d" id="dummy3"></div>
+  <div class="dummy-3d" id="dummy4"></div>
+  <div class="dummy-3d" id="dummy5"></div>
+  <div class="dummy-3d" id="dummy6"></div>
 
   <div class="scan-line"></div>
   <p class="scanner-text">🔍 Memindai lingkungan sekitar...</p>
 </section>
+
 
 
   <footer>
