--- a/ar_view.html
+++ b/ar_view.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Smart Environment Monitor</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
   <header>
@@ -38,10 +38,10 @@
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <script src="api.js"></script>
-  <script src="chart.js"></script>
-  <script src="ai-insight.js"></script>
-  <script src="camera.js"></script>
-  <script src="script.js"></script>
+  <script src="js/api.js"></script>
+  <script src="js/chart.js"></script>
+  <script src="js/ai-insight.js"></script>
+  <script src="js/camera.js"></script>
+  <script src="js/script.js"></script>
 </body>
 </html>
