--- a/index.html
+++ b/index.html
@@ -41,16 +41,20 @@
   <div id="camera-container"></div>
 
   <!-- Dummy AR objects -->
-  <div class="dummy-3d" id="dummy1"></div>
-  <div class="dummy-3d" id="dummy2"></div>
-  <div class="dummy-3d" id="dummy3"></div>
-  <div class="dummy-3d" id="dummy4"></div>
-  <div class="dummy-3d" id="dummy5"></div>
-  <div class="dummy-3d" id="dummy6"></div>
+  <div class="dummy-3d" id="dummy1" data-sensor="temp:28°C, AQI:70"></div>
+  <div class="dummy-3d" id="dummy2" data-sensor="temp:29°C, AQI:65"></div>
+  <div class="dummy-3d" id="dummy3" data-sensor="temp:30°C, AQI:80"></div>
+  <div class="dummy-3d" id="dummy4" data-sensor="temp:27°C, AQI:50"></div>
+  <div class="dummy-3d" id="dummy5" data-sensor="temp:26°C, AQI:40"></div>
+  <div class="dummy-3d" id="dummy6" data-sensor="temp:31°C, AQI:90"></div>
 
   <div class="scan-line"></div>
   <p class="scanner-text">🔍 Memindai lingkungan sekitar...</p>
 </section>
+
+<!-- Tooltip info -->
+<div id="dummy-tooltip" class="hidden"></div>
+
 
 
 
