--- a/ar_view.html
+++ b/ar_view.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html lang="id">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Smart Environment Monitor</title>
   <link rel="stylesheet" href="css/style.css" />
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r152/three.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/three@0.152.2/examples/js/loaders/OBJLoader.js"></script>
+
 </head>
+
 <body>
   <header>
     <h1>🌤️ Smart Environment Monitor</h1>
@@ -44,4 +49,5 @@
   <script src="js/camera.js"></script>
   <script src="js/script.js"></script>
 </body>
+
 </html>
