--- a/ar_view.html
+++ b/ar_view.html
@@ -48,6 +48,7 @@
   <script src="js/ai-insight.js"></script>
   <script src="js/camera.js"></script>
   <script src="js/script.js"></script>
+  <script src="js/ar-dummy.js"></script>
 </body>
 
 </html>
