--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html lang="id">
-
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Smart Environment Monitor</title>
   <link rel="stylesheet" href="css/style.css" />
 </head>
-
 <body>
   <header>
     <h1>🌤️ Smart Environment Monitor</h1>
@@ -15,7 +13,6 @@
   </header>
 
   <main>
-    <!-- Cuaca -->
     <div class="card" id="weather-card">
       <h2>🌡️ Cuaca Saat Ini</h2>
       <p id="lokasi">Kota Semarang</p>
@@ -23,7 +20,6 @@
       <p id="kondisi">Mendeteksi kondisi...</p>
     </div>
 
-    <!-- Sensor Lingkungan -->
     <div class="card" id="sensor-card">
       <h2>🌫️ Kualitas Udara</h2>
       <p id="aqi">Mengukur kualitas udara...</p>
@@ -32,7 +28,6 @@
       </div>
     </div>
 
-    <!-- Insight AI -->
     <div class="card" id="ai-card">
       <h2>🤖 Insight AI</h2>
       <p id="ai-insight">Menunggu data sensor...</p>
@@ -45,23 +40,15 @@
     <p class="scanner-text">🔍 Memindai lingkungan sekitar...</p>
   </section>
 
-
-
-
   <footer>
     © 2025 Smart Environment Monitor | Universitas Wahid Hasyim Semarang
   </footer>
 
-  <!-- Scripts -->
-  <script src="js/api.js"></script>
-  <script src="js/ai-insight.js"></script>
-  <script src="js/ar-dummy.js"></script>
-
-
+  <!-- Libraries -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r152/three.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/three@0.152.2/examples/js/loaders/OBJLoader.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
+  <!-- Custom scripts -->
+  <script src="js/ar-dummy.js"></script>
 </body>
-
 </html>
